# csvp

./: .gitignore  README.md  docker-compose.yml
config/: pipeline_config.json
ingestor/: Dockerfile  package.json
ingestor/src/: index.ts
worker/: Dockerfile  pyproject.toml
worker/src/: __init__.py  main.py
