[project]
name = "csv-worker"
version = "0.1.0"
description = "High performance CSV processing worker using Polars"
requires-python = ">=3.11"
dependencies = [
    "polars>=0.20.0",
    "pymongo>=4.6.0",
    "pika>=1.3.0",
    "s3fs>=2023.12.0",
    "fsspec>=2023.12.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
